--- a/style.css
+++ b/style.css
@@ -35,8 +35,37 @@ header{
     
 }
 .intro__text{
-    /* color: #00adb5; */
     font-size: 35px;
     font-family: 'Alegreya', serif;
     /* font-family: 'VT323', monospace; */
+}
+.projects{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    /* align-items: flex-end; */
+    /* height: 800px; */
+}
+.project{
+    background-color: #222831;
+    /* background-color: #eeeeee; */
+    width: 55%;
+    /* margin:auto; */
+    margin-bottom: 100px;
+    margin-top: 100px;
+    height: 300px;
+    border-top-left-radius: 15%;
+    border-bottom-right-radius: 15%;
+}
+.left{
+    margin-left: 30px;
+}
+.right{
+    margin-left: auto;
+    margin-right: 30px;
+}
+.project__title{
+    font-size: 100px;
+    text-align: center;
+    /* margin-bottom: 100px; */
 }
