--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body{
-    /* background-color: #2b2e4a; */
     background-color: #393e46;
     margin: 0;
     padding: 0;
@@ -11,13 +10,10 @@ header{
     justify-content: space-around;
     align-items: center;
     height: 100vh;
-    /* width: 80%; */
-    /* margin:auto; */
-
+  
 }
 .intro{
     color: #00adb5;
-    /* color: #eeeeee; */
     width: 65%;
     
 }
@@ -25,7 +21,6 @@ img{
     display: block;
 }
 .photo{
-    /* object-fit: contain; */
     height: 300px;
     width:300px;
     border-radius: 50%;
@@ -40,27 +35,18 @@ img{
 .intro__text{
     font-size: 35px;
     font-family: 'Alegreya', serif;
-    /* font-family: 'VT323', monospace; */
 }
 .projects__section{
     background-color:#D0CFBB;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-evenly;
-    /* align-items: flex-end; */
-    /* height: 800px; */
 }
 .project{
-    background-color: #222831;
     display: flex;
-    /* justify-content: space-between; */
-    width: 55%;
-    margin-bottom: 100px;
-    margin-top: 100px;
+    max-width: 70%;
+    margin-top: 150px;
+    margin-bottom: 60px;
     height: 300px;
-    border-top-left-radius: 15%;
-    border-bottom-right-radius: 15%;
-    color: #19d3da;
 }
 .left{
     margin-left: 30px;
@@ -70,15 +56,34 @@ img{
     margin-right: 30px;
 }
 .project__header{
-    font-size: 100px;
+    font-size: 80px;
+    letter-spacing: 10px;
     text-align: center;
+    font-family: 'Faster One', cursive;
 }
 .project__image{
-    border-top-left-radius: 15%;
-    width: 40%;
+    border-radius: 15px;
+    width: 45%;
+    box-shadow: 0 6px 8px rgba(0,0,0,0.6);
+    transition: all 0.5s;
+}
+.project__image:hover{
+    transform: scale(1.05);
 }
 .project__info{
     display: flex;
     flex-flow: column;
-    margin-left: 30px;
+    margin-left: 100px;
+    border-radius: 15px;
+}
+.project__title{
+  color: #bb2205;
+  font-size: 35px;
+  letter-spacing: 4px;
+  font-family: 'Lemon', cursive;
+}
+.project__info p{
+    color:black;
+    font-size: 20px;
+    line-height: 34px;
 }
