--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ img{
     
 }
 .project__info{
+    font-family: 'Heebo', sans-serif;
     display: flex;
     flex-flow: column;
     margin-left: 100px;
