--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+html {
+    scroll-behavior: smooth;
+  }
 body{
-    background-color: #393e46;
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 header{
+    background-color: #393e46;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -85,7 +89,8 @@ img{
     max-width: 40%;
 }
 .project__title{
-  color: #bb2205;
+  /* color: #bb2205; */
+  color: #bb2f13;
   font-size: 35px;
   letter-spacing: 4px;
   font-family: 'Lemon', cursive;
@@ -95,7 +100,9 @@ img{
     font-size: 20px;
     line-height: 34px;    
 }
-
+.last__project{
+    margin-bottom: 200px;
+}
 
 /* slider button */
 .button_slide {
@@ -136,7 +143,45 @@ img{
   }
   
 
-
+footer{
+    text-align: center;
+    /* margin-top: 300px; */
+    background-color: #333;
+    height: 32vh;
+}
+.footer__container{
+    /* display: none; */
+    padding-top: 50px;
+    /* height: 200px; */
+}
+.social-links{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.social-links a{
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 30px;
+}
+.social-links a i:hover{
+    color:black;
+}
+.back-to-top i{
+    font-size: 32px;
+}
+.back-to-top i:hover{
+    color: black;
+}
+.footer__hr{
+    border-bottom-color: rgb(128, 128, 128);
+    width: 30%;
+    height: 0px;
+    border-top: 2px solid hsla(0,0%,100%,.1);
+}
+.footer__text{
+    color: grey;
+    margin-bottom: 50px;
+}
 /****  reponsive design    ****/
 
 @media screen and (max-width:1370px){
