--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ img{
 }
 .big__text{
     font-weight: 500;
-    font-size: 100px;
+    font-size: 85px;
     font-family: 'Bungee Shade', cursive;
     /* font-family: 'Black Ops One', cursive; */
     
@@ -91,6 +91,7 @@ img{
   /* color: #bb2205; */
   color: #bb2f13;
   font-size: 35px;
+  font-weight: 200;
   letter-spacing: 4px;
   font-family: 'Lemon', cursive;
 }
@@ -110,10 +111,10 @@ img{
     border-radius: 0px;
     padding: 5px 10px;
     display: inline-block;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: Montserrat,sans-serif;
     font-weight: 700;
     font-size: 17px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     cursor: pointer;
     box-shadow: inset 0 0 0 0 rgb(0, 179, 149);
     -webkit-transition: ease-out 0.6s;
@@ -122,18 +123,19 @@ img{
     
   }
   .button__span{
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: Montserrat,sans-serif;
     font-weight: 700;
     color: rgb(0, 179, 149);
     font-weight: 500;
     font-size: 16px;
-    /* letter-spacing: 1px; */
     cursor: pointer;
     display: inline-block;
     margin-left: 20px;
   }
   .button__span:hover {
-      color: white
+      /* color: white; */
+      font-weight: 700;
+      color: rgb(97, 50, 50);
   }
   
   .slide_right:hover {
@@ -141,6 +143,22 @@ img{
     color: white;
   }
   
+.button__resume{
+    vertical-align: .4rem;
+    color: #d8d5d5;
+    font-weight: 700;
+    font-size: 14px;
+    border-color: #d8d5d5;
+    /* font-family:  Alegreya, serif; */
+    font-family: Montserrat,sans-serif;
+    box-shadow: inset 0 0 0 0 #eeeeee;
+}
+.button__resume:hover{
+    box-shadow: inset 400px 0 0 0 rgb(20, 19, 19);
+    color: #00adb5;
+    /* border-top: 3px solid #00adb5 ; */
+}
+
 
 footer{
     text-align: center;
@@ -325,7 +343,9 @@ footer{
         height: 200px;
         width: 200px;
     }
-    
+    .button__resume{
+        font-size: 12px;
+    }
 }
 @media screen and (max-width: 335px){
     .project__header{
